--- a/klv-pechi/package.json
+++ b/klv-pechi/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "framer-motion": "^12.16.0",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
     "prop-types": "^15.8.1",
