--- a/klv-pechi/package.json
+++ b/klv-pechi/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^12.16.0",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
