--- a/klv-pechi/package.json
+++ b/klv-pechi/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "critters": "^0.0.25",
     "framer-motion": "^12.16.0",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
