--- a/klv-pechi/package.json
+++ b/klv-pechi/package.json
@@ -21,11 +21,12 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
-    "sass": "^1.87.0"
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1"
+    "eslint-config-next": "15.3.1",
+    "sass": "^1.89.2"
   }
 }
