--- a/klv-pechi/package.json
+++ b/klv-pechi/package.json
@@ -10,17 +10,24 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@portabletext/react": "^4.0.3",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/locale-ru-kz": "^1.1.23",
+    "@sanity/vision": "^4.8.1",
     "classnames": "^2.5.1",
     "critters": "^0.0.25",
     "framer-motion": "^12.16.0",
+    "groq": "^4.8.1",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
+    "next-sanity": "^11.1.0",
     "next-sitemap": "^4.2.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "sanity": "^4.8.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
